--- a/1/code/1-1번 숙제 (2회 재시도).html
+++ b/1/code/1-1번 숙제 (2회 재시도).html
@@ -149,7 +149,7 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 30px;
-            grid-auto-rows: 450px;
+            grid-auto-rows: 310px;
             padding: 0 30px;
             width: 100%;
             height: 100%;
@@ -235,7 +235,7 @@
         .bookmark-tags {
             display: flex;
             gap: 10px;
-            padding: 35px 0 10px 0;
+            padding: 20px 0 10px 0;
             margin-bottom: auto;
         }
         .bookmark-tag {
@@ -248,6 +248,7 @@
             display: flex;
             width: 100%;
             justify-content: space-between;
+            align-items: center;
         }
         .bookmark-info {
             display: flex;
@@ -256,7 +257,7 @@
         .menu {
             display: none;
         }
-        @media screen and (max-width: 1460px) {
+        @media screen and (max-width: 1660px) {
             .menu {
                 display: flex;
                 align-items: center;
@@ -293,17 +294,12 @@
             }
         }
         
-        @media screen and (max-width: 960px) {
+        @media screen and (max-width: 860px) {
             #bookmarks  {
                 grid-template-columns: repeat(1, 1fr);    
             }
             .searchbar {
                 width: 200px;
-            }
-        }
-        @media screen and (max-width: 1000px) {
-            .searchbar {
-                width: 150px;
             }
         }
     </style>
@@ -399,7 +395,7 @@
                             <div class="svg-inputed">23 Sep</div>
                             <div class="svg-inputed">15 Jan</div>
                         </div>
-                        pin
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
                     </div>
                 </div>
                 <div class="bookmark">
@@ -435,7 +431,7 @@
                             <div class="svg-inputed">24 Sep</div>
                             <div class="svg-inputed">10 Jan</div>
                         </div>
-                        pin
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
                     </div>
                 </div>
                 <div class="bookmark">
@@ -470,7 +466,7 @@
                             <div class="svg-inputed">never</div>
                             <div class="svg-inputed">20 Feb</div>
                         </div>
-                        pin
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
                     </div>
                 </div>
                 <div class="bookmark">
@@ -505,7 +501,7 @@
                             <div class="svg-inputed">23 Sep</div>
                             <div class="svg-inputed">18 Feb</div>
                         </div>
-                        pin
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
                     </div>
                 </div>
             </div>
