--- a/1/code/1-1번 숙제 (2회 재시도).html
+++ b/1/code/1-1번 숙제 (2회 재시도).html
@@ -51,6 +51,8 @@
         }
         .bookmark-search-bar {
             display: flex;
+            position: sticky;
+            top:0;
             justify-content: space-between;
             align-items: center;
             width: 100%;
@@ -465,6 +467,216 @@
                             <div class="svg-inputed">0</div>
                             <div class="svg-inputed">never</div>
                             <div class="svg-inputed">20 Feb</div>
+                        </div>
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
+                    </div>
+                </div>
+                <div class="bookmark">
+                    <!-- 개별 북마크 내용 작성 -->
+                    <div class="bookmark-header">
+                        <div class="bookmark-title-area">
+                            <div style="display: flex; gap: 15px;">
+                                <div class="bookmark-image"></div>
+                                <div>
+                                    <p class="bookmark-title">Claude</p>
+                                    <p class="bookmark-subtitle">claude.ai</p>
+                                </div>
+                            </div>
+                            <div class="option">...</div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="bookmark-main">
+                        <p class="bookmark-description">
+                            An AI assistant created by Anthropic that can help with analysis, writing, coding, math, and creative tasks through natural conversation.
+                        </p>
+                    </div>
+                    <div class="bookmark-tags">
+                        <div class="bookmark-tag">Tools</div>
+                        <div class="bookmark-tag">AI</div>
+                        <div class="bookmark-tag">Learning</div>
+                    </div>
+                    <hr style="transform: scale(1.2, 1);">
+                    <div class="bookmark-footer">
+                        <div class="bookmark-info">
+                            <div class="svg-inputed">73</div>
+                            <div class="svg-inputed">23 Sep</div>
+                            <div class="svg-inputed">18 Feb</div>
+                        </div>
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
+                    </div>
+                </div>
+                <div class="bookmark">
+                    <!-- 개별 북마크 내용 작성 -->
+                    <div class="bookmark-header">
+                        <div class="bookmark-title-area">
+                            <div style="display: flex; gap: 15px;">
+                                <div class="bookmark-image"></div>
+                                <div>
+                                    <p class="bookmark-title">Claude</p>
+                                    <p class="bookmark-subtitle">claude.ai</p>
+                                </div>
+                            </div>
+                            <div class="option">...</div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="bookmark-main">
+                        <p class="bookmark-description">
+                            An AI assistant created by Anthropic that can help with analysis, writing, coding, math, and creative tasks through natural conversation.
+                        </p>
+                    </div>
+                    <div class="bookmark-tags">
+                        <div class="bookmark-tag">Tools</div>
+                        <div class="bookmark-tag">AI</div>
+                        <div class="bookmark-tag">Learning</div>
+                    </div>
+                    <hr style="transform: scale(1.2, 1);">
+                    <div class="bookmark-footer">
+                        <div class="bookmark-info">
+                            <div class="svg-inputed">73</div>
+                            <div class="svg-inputed">23 Sep</div>
+                            <div class="svg-inputed">18 Feb</div>
+                        </div>
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
+                    </div>
+                </div>
+                <div class="bookmark">
+                    <!-- 개별 북마크 내용 작성 -->
+                    <div class="bookmark-header">
+                        <div class="bookmark-title-area">
+                            <div style="display: flex; gap: 15px;">
+                                <div class="bookmark-image"></div>
+                                <div>
+                                    <p class="bookmark-title">Claude</p>
+                                    <p class="bookmark-subtitle">claude.ai</p>
+                                </div>
+                            </div>
+                            <div class="option">...</div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="bookmark-main">
+                        <p class="bookmark-description">
+                            An AI assistant created by Anthropic that can help with analysis, writing, coding, math, and creative tasks through natural conversation.
+                        </p>
+                    </div>
+                    <div class="bookmark-tags">
+                        <div class="bookmark-tag">Tools</div>
+                        <div class="bookmark-tag">AI</div>
+                        <div class="bookmark-tag">Learning</div>
+                    </div>
+                    <hr style="transform: scale(1.2, 1);">
+                    <div class="bookmark-footer">
+                        <div class="bookmark-info">
+                            <div class="svg-inputed">73</div>
+                            <div class="svg-inputed">23 Sep</div>
+                            <div class="svg-inputed">18 Feb</div>
+                        </div>
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
+                    </div>
+                </div>
+                <div class="bookmark">
+                    <!-- 개별 북마크 내용 작성 -->
+                    <div class="bookmark-header">
+                        <div class="bookmark-title-area">
+                            <div style="display: flex; gap: 15px;">
+                                <div class="bookmark-image"></div>
+                                <div>
+                                    <p class="bookmark-title">Claude</p>
+                                    <p class="bookmark-subtitle">claude.ai</p>
+                                </div>
+                            </div>
+                            <div class="option">...</div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="bookmark-main">
+                        <p class="bookmark-description">
+                            An AI assistant created by Anthropic that can help with analysis, writing, coding, math, and creative tasks through natural conversation.
+                        </p>
+                    </div>
+                    <div class="bookmark-tags">
+                        <div class="bookmark-tag">Tools</div>
+                        <div class="bookmark-tag">AI</div>
+                        <div class="bookmark-tag">Learning</div>
+                    </div>
+                    <hr style="transform: scale(1.2, 1);">
+                    <div class="bookmark-footer">
+                        <div class="bookmark-info">
+                            <div class="svg-inputed">73</div>
+                            <div class="svg-inputed">23 Sep</div>
+                            <div class="svg-inputed">18 Feb</div>
+                        </div>
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
+                    </div>
+                </div>
+                <div class="bookmark">
+                    <!-- 개별 북마크 내용 작성 -->
+                    <div class="bookmark-header">
+                        <div class="bookmark-title-area">
+                            <div style="display: flex; gap: 15px;">
+                                <div class="bookmark-image"></div>
+                                <div>
+                                    <p class="bookmark-title">Claude</p>
+                                    <p class="bookmark-subtitle">claude.ai</p>
+                                </div>
+                            </div>
+                            <div class="option">...</div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="bookmark-main">
+                        <p class="bookmark-description">
+                            An AI assistant created by Anthropic that can help with analysis, writing, coding, math, and creative tasks through natural conversation.
+                        </p>
+                    </div>
+                    <div class="bookmark-tags">
+                        <div class="bookmark-tag">Tools</div>
+                        <div class="bookmark-tag">AI</div>
+                        <div class="bookmark-tag">Learning</div>
+                    </div>
+                    <hr style="transform: scale(1.2, 1);">
+                    <div class="bookmark-footer">
+                        <div class="bookmark-info">
+                            <div class="svg-inputed">73</div>
+                            <div class="svg-inputed">23 Sep</div>
+                            <div class="svg-inputed">18 Feb</div>
+                        </div>
+                        <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
+                    </div>
+                </div>
+                <div class="bookmark">
+                    <!-- 개별 북마크 내용 작성 -->
+                    <div class="bookmark-header">
+                        <div class="bookmark-title-area">
+                            <div style="display: flex; gap: 15px;">
+                                <div class="bookmark-image"></div>
+                                <div>
+                                    <p class="bookmark-title">Claude</p>
+                                    <p class="bookmark-subtitle">claude.ai</p>
+                                </div>
+                            </div>
+                            <div class="option">...</div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="bookmark-main">
+                        <p class="bookmark-description">
+                            An AI assistant created by Anthropic that can help with analysis, writing, coding, math, and creative tasks through natural conversation.
+                        </p>
+                    </div>
+                    <div class="bookmark-tags">
+                        <div class="bookmark-tag">Tools</div>
+                        <div class="bookmark-tag">AI</div>
+                        <div class="bookmark-tag">Learning</div>
+                    </div>
+                    <hr style="transform: scale(1.2, 1);">
+                    <div class="bookmark-footer">
+                        <div class="bookmark-info">
+                            <div class="svg-inputed">73</div>
+                            <div class="svg-inputed">23 Sep</div>
+                            <div class="svg-inputed">18 Feb</div>
                         </div>
                         <img src="../images/pin.jpg" alt="pin image" style="width: 20px; height: 20px;">
                     </div>
