--- a/2/code/index.html
+++ b/2/code/index.html
@@ -13,7 +13,10 @@
             <section class="desserts">
                 <article class="dessert">
                     <div class="image-area">
-                        <img src="" alt="">
+                        <img src="" alt="이미지">
+                        <div class="add-to-cart">
+                            add to cart
+                        </div>
                     </div>
                 </article>
             </section>
