--- a/2/code/index.html
+++ b/2/code/index.html
@@ -19,6 +19,14 @@
                         </div>
                     </div>
                 </article>
+                <article class="dessert">
+                    <div class="image-area">
+                        <img src="../images/2025-03-22 17;12;04.png" alt="이미지">
+                        <div class="add-to-cart">
+                            add to cart
+                        </div>
+                    </div>
+                </article>
             </section>
         </main>
         <aside class="cart"></aside>
