--- a/2/code/index.html
+++ b/2/code/index.html
@@ -13,10 +13,15 @@
             <section class="desserts">
                 <article class="dessert">
                     <div class="image-area">
-                        <img src="../images/20260103_233906.png" alt="이미지">
+                        <img src="../images/cyrene.png" alt="이미지">
                         <div class="add-to-cart">
                             add to cart
                         </div>
+                    </div>
+                    <div class="dessert-text-area">
+                        <p class="sub-text">Waffle</p>
+                        <p class="main-text">Waffle with Berries</p>
+                        <p class="fee-text">$6.50</p>
                     </div>
                 </article>
                 <article class="dessert">
@@ -25,6 +30,24 @@
                         <div class="add-to-cart">
                             add to cart
                         </div>
+                    </div>
+                    <div class="dessert-text-area">
+                        <p class="sub-text">Creme Brulee</p>
+                        <p class="main-text">Vanilla Bean Creme Brulee</p>
+                        <p class="fee-text">$7.00</p>
+                    </div>
+                </article>
+                <article class="dessert">
+                    <div class="image-area">
+                        <img src="../images/2025-03-22 17;12;04.png" alt="이미지">
+                        <div class="add-to-cart">
+                            add to cart
+                        </div>
+                    </div>
+                    <div class="dessert-text-area">
+                        <p class="sub-text">Macaron</p>
+                        <p class="main-text">Macaron Mix of Five</p>
+                        <p class="fee-text">$8.00</p>
                     </div>
                 </article>
             </section>
