--- a/2/code/index.html
+++ b/2/code/index.html
@@ -39,7 +39,7 @@
                 </article>
                 <article class="dessert">
                     <div class="image-area">
-                        <img src="../images/2025-03-22 17;12;04.png" alt="이미지">
+                        <img src="../images/weight.jpg" alt="이미지">
                         <div class="add-to-cart">
                             add to cart
                         </div>
@@ -48,6 +48,84 @@
                         <p class="sub-text">Macaron</p>
                         <p class="main-text">Macaron Mix of Five</p>
                         <p class="fee-text">$8.00</p>
+                    </div>
+                </article>
+                <article class="dessert">
+                    <div class="image-area">
+                        <img src="../images/1000010051.jpg" alt="이미지">
+                        <div class="add-to-cart">
+                            add to cart
+                        </div>
+                    </div>
+                    <div class="dessert-text-area">
+                        <p class="sub-text">Tiramisu</p>
+                        <p class="main-text">Classic Tiramisu</p>
+                        <p class="fee-text">$5.50</p>
+                    </div>
+                </article>
+                <article class="dessert">
+                    <div class="image-area">
+                        <img src="../images/1000010052.jpg" alt="이미지">
+                        <div class="add-to-cart">
+                            add to cart
+                        </div>
+                    </div>
+                    <div class="dessert-text-area">
+                        <p class="sub-text">Bakilava</p>
+                        <p class="main-text">Pistachio Bakiava</p>
+                        <p class="fee-text">$4.00</p>
+                    </div>
+                </article>
+                <article class="dessert">
+                    <div class="image-area">
+                        <img src="../images/1000010053.jpg" alt="이미지">
+                        <div class="add-to-cart">
+                            add to cart
+                        </div>
+                    </div>
+                    <div class="dessert-text-area">
+                        <p class="sub-text">Pie</p>
+                        <p class="main-text">Lemon Meringue Pie</p>
+                        <p class="fee-text">$5.00</p>
+                    </div>
+                </article>
+                <article class="dessert">
+                    <div class="image-area">
+                        <img src="../images/1000010054.jpg" alt="이미지">
+                        <div class="add-to-cart">
+                            add to cart
+                        </div>
+                    </div>
+                    <div class="dessert-text-area">
+                        <p class="sub-text">Cake</p>
+                        <p class="main-text">Red Velvet Cake</p>
+                        <p class="fee-text">$4.50</p>
+                    </div>
+                </article>
+                <article class="dessert">
+                    <div class="image-area">
+                        <img src="../images/1000010055.jpg" alt="이미지">
+                        <div class="add-to-cart">
+                            add to cart
+                        </div>
+                    </div>
+                    <div class="dessert-text-area">
+                        <p class="sub-text">Brownie</p>
+                        <p class="main-text">Salted Caramel Brownie</p>
+                        <p class="fee-text">$5.50</p>
+                    </div>
+                </article>
+                <article class="dessert">
+                    <div class="image-area">
+                        <img src="../images/1000010056.jpg" alt="이미지">
+                        <div class="add-to-cart">
+                            add to cart
+                        </div>
+                    </div>
+                    <div class="dessert-text-area">
+                        <p class="sub-text">Panna Cotta</p>
+                        <p class="main-text">Vanilla Panna Cotta</p>
+                        <p class="fee-text">$6.50</p>
                     </div>
                 </article>
             </section>
