--- a/2/code/index.html
+++ b/2/code/index.html
@@ -130,7 +130,9 @@
                 </article>
             </section>
         </main>
-        <aside class="cart"></aside>
+        <aside class="cart">
+            <p class="cart-title">Your Cart (#)</p>
+        </aside>
     </section>
 </body>
 </html>
