--- a/3/A5/index.html
+++ b/3/A5/index.html
@@ -13,7 +13,7 @@
     <section class="notice-table">
         <div class="notice">
             <header class="notice-header">
-                <article class="notice-classification">
+                <article class="notice-classification imp">
                     중요
                 </article>
                 <main class="notice-title">
